# EISD

Laboratorio/: 04_HDL_Simulation__Verilog_Modeling.pdf.xopp  05_Logic_and_High_Level_Synthesis_FPGA.pdf.xopp~  log.txt
Laboratorio/01/: Errors.md
Laboratorio/02/: 2020-12-21-Note-22-47.xopp  mult_EFSM.drawio
Laboratorio/03/Solutions/: mult.vhd  stimuli.tcl  testbench.vhd
Laboratorio/04/: 04_HDL_Simulation__Verilog_Modeling.pdf.xopp~
Laboratorio/05/: 05_Logic_and_High_Level_Synthesis_FPGA.pdf.xopp  mult.cpp
Laboratorio/06/2_hls_and_SoC/: build_all.tcl
Laboratorio/06_sources/1_christmas_light/: christmas_light.vhd
Laboratorio/07/solutions/: circuit.vams
Laboratorio/08/: 08-solutions.rar
Laboratorio/08/splatters/: root_apb_wrapper.v
Laboratorio/10/: MBD_FMI.pdf.xopp  MBD_FMI.pdf.xopp~
Laboratorio/10/10_sources/: fmu_generator.sh
Laboratorio/Lesson 1/: SystemC.md
Laboratorio/Lesson 2/: 02_SystemC_Modeling_TL.pdf.xopp
Laboratorio/Lesson 2/sources/root_lesson/AT4/: CMakeLists.txt
Laboratorio/Seminar Machine Learning/: Seminar-Embedded-ML_v1.1_1p.pdf.xopp
Teoria/: .2_notes_temp.autosave.xopp  1_Notes.xopp  1_Notes.xopp~  2_Notes.xopp  Digital_Twin.xopp  High_Level_Synthesis_Notes.xopp  High_Level_Synthesis_Notes.xopp~  IndustrialIoT_and_Cloud.xopp  Industry_4.xopp  Machine_Learning_notes.xopp  ModelBasedDesign_notes.xopp  Note_temp.xopp  Riassunto_teoria.xopp  Riassunto_teoria.xopp~  Teoria.xopp  Teoria.xopp~  eisd_secondo_parziale.xopp  fsm_parziale.sv  fsm_parziale.vhd  signals_differences.xopp  sintassi_prova.sv  sintassi_prova.vhd
(+16883 files in other folders)
